benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_Add_NormalizeBitString_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul_Add_NormalizeBitString.rs
Time: 2025-09-15 20:37:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: no method named `spec_shl` found for struct `verus_builtin::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_NormalizeBitString_impl.rs:61:41
   |
61 |         Str2Int(res@) == Str2Int(s@) * (1nat << m as nat),
   |                                         ^^^^^^^^^^^^^^^^
   |
help: there is a method `spec_mul` with a similar name
   |
61 -         Str2Int(res@) == Str2Int(s@) * (1nat << m as nat),
61 +         Str2Int(res@) == Str2Int(s@) * (spec_mul),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: no method named `spec_shl` found for struct `verus_builtin::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_Add_NormalizeBitString_impl.rs:61:41
   |
61 |         Str2Int(res@) == Str2Int(s@) * (1nat << m as nat),
   |                                         ^^^^^^^^^^^^^^^^
   |
help: there is a method `spec_mul` with a similar name
   |
61 -         Str2Int(res@) == Str2Int(s@) * (1nat << m as nat),
61 +         Str2Int(res@) == Str2Int(s@) * (spec_mul),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
